# 2023-advent-of-code

./: README.md
ASP/D1/: test_trebuchet.py  trebuchet.py
DHE/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18_closed_form.py  day18_graphic.py  day19_1.py  day19_2.py  day2.py  day20.py  day22.py  day24.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
JDE/day01/: main.py
JDE/day02/: main.py
JDE/day03/: main.py  main2.py
JDE/day04/: main.py
JDE/day05/: main.py
JDE/day06/: main.py
JDE/day07/: main.py
JDE/day08/: main.py
JDE/day09/: main.py
JDE/day10/: main.py
JDE/day11/: main.py
JDE/day12/: main.py
JDE/day13/: main.py
JDE/day14/: main.py
JDE/day15/: main.py
JDE/warmup-2020-day-1/: main.py
JST/4/: 4.py  input.txt
MDE/aoc-2023/: .gitignore  pom.xml
MRU/day_01/: run.py
MRU/day_02/: run.py
MRU/day_03/: run_part1.py  run_part2.py
MRU/day_04/: run_part1.py  run_part2.py
MRU/day_05/: run_part1.py  run_part2.py
MRU/day_06/: run_part1.py  run_part2.py
MRU/day_07/: run.py
MRU/day_08/: run_part1.py  run_part2.py
MRU/day_09/: run.py
MRU/day_10/: input.txt  run.py
MZU/01/: test.py  year2023_day01a.py  year2023_day01b.py
MZU/02/: test.py  year2023_day02a.py  year2023_day02b.py
MZU/03/: test.py  year2023_day03a.py  year2023_day03b.py
MZU/04/: test.py  year2023_day04a.py  year2023_day04b.py
MZU/05/: test.py  year2023_day05a.py  year2023_day05b.py
MZU/06/: test.py  year2023_day06a.py  year2023_day06b.py
MZU/07/: year2023_day07b.py
MZU/08/: test.py  year2023_day08a.py  year2023_day08b.py
MZU/09/: test.py  year2023_day09a.py  year2023_day09b.py
MZU/10/: test.py  visualization-b  year2023_day10a.py  year2023_day10b.py
MZU/11/: test.py  (+2 more)
MZU/12/: test.py  (+2 more)
NME/: .gitignore  CMakeLists.txt
NME/aoc_utils/: CMakeLists.txt
NME/aoc_utils/include/aoc_utils/: aoc_utils.h
NME/aoc_utils/src/: aoc_utils.c
NME/src/_template/: CMakeLists.txt  part_1.c  part_2.c
NME/src/day_1/: CMakeLists.txt  part_1.c  part_2.c
NME/src/day_10/: CMakeLists.txt  part_1.c  part_2.c
NME/src/day_11/: CMakeLists.txt  part_1.c  part_2.c
NME/src/day_12/: CMakeLists.txt  example2.txt  part_1.c  part_2.c
NME/src/day_13/: CMakeLists.txt  part_1.c  part_2.c
NME/src/day_14/: CMakeLists.txt  part_1.c  part_2.c
NME/src/day_15/: CMakeLists.txt  part_1.c  part_2.c
NME/src/day_16/: CMakeLists.txt  part_1.c  part_2.c
NME/src/day_17/: CMakeLists.txt  example2.txt  example3.txt  part_1.c  part_2.c
NME/src/day_18/: CMakeLists.txt  part_1.c  part_2.c
NME/src/day_19/: CMakeLists.txt  example.dot  graph.dot  part_1.c  part_2.c
NME/src/day_2/: CMakeLists.txt  part_1.c  part_2.c
NME/src/day_20/: CMakeLists.txt  graph.dot  part_1.c  part_2.c
NME/src/day_21/: CMakeLists.txt  part_1.c  part_2.c
NME/src/day_22/: CMakeLists.txt  part_1.c  part_2.c
NME/src/day_23/: CMakeLists.txt  example.dot  graph.dot  part_1.c  part_2.c
NME/src/day_24/: CMakeLists.txt  part_1.c  part_2.c
NME/src/day_25/: CMakeLists.txt  graph.dot  part_1.c
NME/src/day_3/: CMakeLists.txt  part_1.c  part_2.c
NME/src/day_4/: CMakeLists.txt  part_1.c  part_2.c
NME/src/day_5/: CMakeLists.txt  input.txt  part_1.c  part_2.c  tmp.txt
NME/src/day_6/: CMakeLists.txt  input.txt  part_1.c  part_2.c
NME/src/day_7/: CMakeLists.txt  part_1.c  part_2.c
NME/src/day_8/: CMakeLists.txt  input.txt  part_1.c  part_2.c
NME/src/day_9/: CMakeLists.txt  part_1.c  part_2.c
SKA/: day1.py  go.mod  main.go
SZE/: .gitignore  day1.ipynb  day10.ipynb  day2.ipynb  day3.ipynb  day4.ipynb  day5.ipynb  day6.ipynb  day7.ipynb  day8.ipynb  day9.ipynb
ZCO/: README.md
(+194 files in other folders)
