cmake_minimum_required(VERSION 3.26)
project(2023-advent-of-code)
set(CMAKE_C_STANDARD 17)

add_subdirectory(aoc_utils)

############################################################
# Add subdirectories for each day
############################################################
add_subdirectory(src/day_1)
add_subdirectory(src/day_2)
add_subdirectory(src/day_3)
add_subdirectory(src/day_4)
add_subdirectory(src/day_5)
add_subdirectory(src/day_6)
add_subdirectory(src/day_7)
add_subdirectory(src/day_8)
add_subdirectory(src/day_9)
add_subdirectory(src/day_10)
add_subdirectory(src/day_11)
add_subdirectory(src/day_12)
add_subdirectory(src/day_13)
add_subdirectory(src/day_14)
add_subdirectory(src/day_15)
add_subdirectory(src/day_16)
add_subdirectory(src/day_17)
add_subdirectory(src/day_18)
add_subdirectory(src/day_19)
add_subdirectory(src/day_20)
add_subdirectory(src/day_21)
add_subdirectory(src/day_22)
add_subdirectory(src/day_23)
add_subdirectory(src/day_24)
add_subdirectory(src/day_25)